2007-05-23  Chris Toshok  <toshok@ximian.com>

	[ This gets window titles working for both JS and native windows ]
	
	* compzilla/chrome/content/frame.js (everywhere): use XA_
	properties where possible.
	(chromeless property): use the jquery addClass/removeClass/is
	methods for this, to clean it up a bit.
	(wmName property): flatten the if/else structure a bit.
	(title setter): we need to update both the pyro-namespaced caption
	attribute on the div as well as the contents of the
	windowTitleSpan.
	
	* compzilla/chrome/skin/compzilla.css: make the title caption a
	pyro namespaced attribute.

	* compzilla/chrome/content/atoms.js: add all the XA_*
	atoms. instead of relying on _intern for them.

	* compzilla/chrome/content/start.xul: set a class on the span in
	the title so we can update its content properly.

2007-05-23  Chris Toshok  <toshok@ximian.com>

	* compzilla/src/XAtoms.h: add UTF8_STRING.

	* compzilla/src/compzillaWindow.cpp (GetStringProperty): fix this
	so it handles by XA_STRING and UTF8_STRING properties, and use the
	gdk method to convert from an encoded X property to utf8, which we
	then convert to UTF16.

2007-05-23  Chris Toshok  <toshok@ximian.com>

	[ pretty huge commit ]
	
	* compzilla/public/compzillaIWindowEvents.idl: remove the property
	bag.

	* compzilla/src/compzillaWindowEvents.cpp/.h: remove the property
	bag.

	* compzilla/src/compzillaWindow.cpp (GetStringProperty): since
	this isn't part of the idl anymore, clean it up by taking an Atom
	parameter, and removing a cast.
	(GetProperty): massaged this method from the guts of
	PropertyChanged.  there's certainly more refcounting problems
	here...  we also create instances only to let them die if the
	property isn't found.  This method returns NULL for bag2 if the
	property isn't set.  Also, provide an implementation for
	_NET_WM_ICON_GEOMETRY.
	(PropertyChanged): remove the window parameter.  we should just be
	using mWindow anyway.  no longer do anything with the property bag